--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -30,6 +30,7 @@
 @import "component/global/mainTitle";
 @import "component/global/subTitle";
 @import "component/global/breadcrumb";
+@import "component/global/circleArrow";
 @import "component/news/time";
 @import "component/news/newsIcon";
 @import "component/news/newsItem";
