[new]フロントバリデーションの追加とスクロールを促すアニメーションの実装

--- a/assets/scss/layout/_subHeader.scss
+++ b/assets/scss/layout/_subHeader.scss
@@ -25,6 +25,50 @@
         justify-content: center;
         margin-top: 5%;
     }
+
+    .l-header-sub-index-scroll {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        animation: arrowMove 1s ease-in-out infinite;
+
+        span {
+            font-family: fs.$montserrat;
+            position: absolute;
+            right: 15px;
+            bottom: 50px;
+            color: cl.$c-white;
+            font-size: 0.7rem;
+            letter-spacing: 0.05em;
+            -ms-writing-mode: tb-rl;
+            -webkit-writing-mode: vertical-rl;
+            writing-mode: vertical-rl;
+        }
+
+        &::after {
+            content: "";
+            position: absolute;
+            bottom: 0;
+            right: 22px;
+            width: 1px;
+            height: 50px;
+            background: #eee;
+        }
+    }
+}
+
+@keyframes arrowMove {
+    0% {
+        bottom: 0%;
+    }
+
+    50% {
+        bottom: -2%;
+    }
+
+    100% {
+        bottom: 0%;
+    }
 }
 
 .l-header-sub {
