[fix]軽微な修正とREADMEの編集

--- a/assets/scss/component/global/_mainButton.scss
+++ b/assets/scss/component/global/_mainButton.scss
@@ -24,6 +24,11 @@
         text-align: center;
     }
 
+    button {
+        flex: 1;
+        text-align: center;
+    }
+
     img {
         margin-left: auto;
     }
