[new]robots.txt の設定

--- a/assets/scss/project/_contact.scss
+++ b/assets/scss/project/_contact.scss
@@ -4,7 +4,8 @@
 .p-contact {
     width: 52%;
     margin: auto;
-    padding: 120px 0;
+    padding-top: 50px;
+    padding-bottom: 120px;
 
     .p-contact__text {
         font-size: 15px;
